objects/Input_Beneficiary__c.object
<CustomObject>
    <fields>
        <fullName>Beneficiary_Address__c</fullName>
        <label>Buyer/Supplier Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Beneficiary_City__c</fullName>
        <label>Buyer/Supplier City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beneficiary_Country__c</fullName>
        <label>Buyer/Supplier Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beneficiary_Email__c</fullName>
        <label>Buyer/Supplier Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Beneficiary_Postal_Code__c</fullName>
        <label>Buyer/Supplier Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beneficiary_State__c</fullName>
        <label>Buyer/Supplier State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>